# pytorch-lightning-template

./: .env.example  .gitignore  .project-root  README.md  README_PROJECT.md  README_ZH.md  pyproject.toml  requirements.txt
configs/: default.yaml
configs/data/: mnist.yaml
configs/model/: simplenet.yaml
scripts/: clear_wandb_cache.py
src/: main.py
src/data_modules/: __init__.py  mnist.py
src/models/: __init__.py  simplenet.py
src/modules/: __init__.py  mnist_module.py
src/utils/: __init__.py  cli.py
